force-app/main/default/objects/Exception_Log__c/fields/Async_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_ID__c</fullName>
    <externalId>true</externalId>
    <label>Async Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>