force-app/main/default/objects/Exception_Log__c/fields/Error_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Error_Fingerprint__c</fullName>
    <externalId>true</externalId>
    <label>Error Fingerprint</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>