force-app/main/default/objects/Exception_Log__c/fields/Triggered_By_User__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>